css/styles.css
body {
  font-family: 'Montserrat';
  text-align: center;
}

.container-fluid {
  padding: 3% 15%;
}

/* Headings */

.title {
  color: #fff;
  font-size: 3.5rem;
  line-height: 1.5;
  font-weight: 900;
}

.big-title {
  text-align: left;
  padding-bottom: 2.5rem;
}

.h3-titles-informative {
  font-weight: 700;
  font-size: 1.5rem;
  color: #000;
}

/* Title Section */

#title {
  background-color: #ff4c68;
}

#title .container-fluid {
  padding: 3% 15% 7%;
}

.dog-img-container {
  height: 600px;
}

.dog-img {
  width: 60%;
  transform: rotate(25deg);
  position: absolute;
  right: 25%;
  width: 20%;
}

@media (max-width: 1030px) {
  .container-fluid {
    text-align: center;
  }
  .dog-img {
    position: static;
    transform: none;
    width: 50%;
  }
}

/* Navegation bar settings */

.navbar {
  padding-bottom: 4.5rem;
}
.navbar-brand {
  font-family: 'Ubuntu';
  font-weight: bold;
  font-size: 2.5rem;
}
.nav-item {
  padding: 0 18px;
}
.nav-link {
  font-size: 1.2rem;
  font-family: 'Montserrat';
}

/* Buttoms settings  */

.download-btn {
  margin: 5% 3% 5% 0;
}

/* Features */

#features {
  position: relative;
  z-index: 1;
  background-color: #fff;
  color: #8f8f8f;
}

.features-container {
  padding: 5%;
}

/* Features Icons */

.favi {
  color: #ef8172;
  margin: 1.5rem;
}

.favi:hover {
  color: #ff4c68;
}

/* Testimonial Section  */

#testimonials {
  background-color: #ef8172;
  color: #fff;
}

.testimonials-h2 {
  font-family: 'Montserrat';
  font-weight: bold;
  font-size: 3rem;
  line-height: 1.5;
}

.testimonial-image {
  width: 10%;
  border-radius: 100%;
  margin: 20px;
}

.carousel-item {
  padding: 7% 15%;
}

/* Press section */

#press {
  background-color: #ef8172;
  padding-bottom: 3%;
}

.press-logo {
  margin: 20px 20px 15px;
  width: 15%;
}

/* Princing section */

#pricing {
  padding: 100px;
  color: #8f8f8f;
}

.prices {
  color: #000;
  font-family: 'Montserrat';
  font-weight: bold;
  font-size: 3rem;
  line-height: 1.5;
}
.pricing-card {
  padding: 3% 2%;
}

/* call to action section */

#cta {
  background-color: #ff4c68;
}

.cta-h3 {
  font-weight: 900;
  font-size: 3.5rem;
  line-height: 1.5;
  color: #fff;
  padding-top: 2.5rem;
}

/* Footer */

#footer {
  background-color: #fff;
}

.socmed {
  padding: 2%;
}
.copyr {
  color: #8f8f8f;
}

